--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,6 +101,11 @@ input, select, textarea {
 	body {
 		background-color: #1e252d;
 	}
+	
+	.dark-mode {
+		background-color: black;
+		color: white;
+	  }
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
